@@ -3,3 +3,4 @@
 . 2016-05-11 Modified (site changes)
 . 2016-06-27 Modified (site changes -- live link)
 . 2016-07-20 Modified (site changes)
+. 2017-08-11 Modified (site changes -- video link)
